# mersearch

./: .gitignore  README.md  pyproject.toml
examples/: vwr_search.py
mersearch/: __init__.py  helpers.py  vendors.py
mersearch/vendors/: vwr.py
notebooks/: thermo_fisher_testing.ipynb  vwr_search_implementation_testing.ipynb  vwr_search_testing.ipynb
tests/: README.md  conf.py  test_helpers.py  test_vendors_vwr.py
tests/test_data/mol_files/: CC12CCC3C(CCC4c5cccnc5CCC43C)C1CC(=O)OC2.mol  CCCON=C1CCCCCCCCCCC(=O)OCCC1.mol  COC(=O)C1(C)CCCC2(C)C3CC(=O)OCC3CCC12.mol  O=C1CCCCCCCCCCCCCCO1.mol
