[tool.poetry]
name = "mersearch"
version = "0.1.0"
description = ""
authors = ["jdkern11 <leolion29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.9.5"
pandas = "^1.5.3"
selenium = "^4.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
