[tool.poetry]
name = "mersearch"
version = "1.0.0"
description = ""
authors = ["jdkern11 <leolion29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.9.5"
pandas = "^1.5.3"
selenium = "^4.8.2"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"


[tool.poetry.group.temp.dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
